# mcp-text-embedding

./: .gitignore  README.md  pyproject.toml
src/myembed/: __init__.py  cli.py  config.py  prefetch.py  server.py  store.py
src/text_embedding/: __init__.py  cli.py  config.py  geometry.py  server.py  store.py
tests/: test_store.py
