[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-text-embedding"
version = "0.1.0"
description = "MCP server for a keyed semantic text-embedding store"
requires-python = ">=3.10"
dependencies = [
    # Pin fastmcp<3 for stability (same convention as semantic-scholar-mcp).
    "fastmcp>=2.0.0,<3.0.0",
    "sentence-transformers>=2.2",
    "numpy>=1.24",
    "matplotlib>=3.5",  # CLI `plot`: render the 2-D embedding scatter to PNG
    # Used by `plot` (TSNE) and the geometry calibration (LedoitWolf, LocalOutlierFactor).
    # Previously only transitively present via sentence-transformers; pin it explicitly.
    "scikit-learn>=1.1",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
text-embedding = "text_embedding.cli:main"
mcp-text-embedding = "text_embedding.server:main"
text-embedding-prefetch = "text_embedding.prefetch:main"

[tool.hatch.build.targets.wheel]
packages = ["src/text_embedding"]
